Removes duplicate CFP client, made minimal followers count customizable

--- a/voxxed-days-zurich/build.gradle
+++ b/voxxed-days-zurich/build.gradle
@@ -29,6 +29,7 @@ tasks.withType(JavaExec) {
     main mainClassName
     jvmArgs '-Dorg.tweetwallfx.vdz.day=thursday'
     jvmArgs '-Dorg.tweetwallfx.vdz.time=10:00Z'
+    jvmArgs '-Dorg.tweetwallfx.vdz.min.followers=10'
     jvmArgs '-Djavafx.verbose=true'
     jvmArgs '-Dprism.verbose=true'
 }
