--- a/voxxed-days-zurich/src/main/resources/tweetwallConfig.json
+++ b/voxxed-days-zurich/src/main/resources/tweetwallConfig.json
@@ -13,10 +13,10 @@
                 "stepClassName": "org.tweetwallfx.vdz.steps.FlipInTweets"
             },
             {
-                "stepClassName": "org.tweetwallfx.vdz.steps.ShowSchedule"
+                "stepClassName": "org.tweetwallfx.vdz.steps.FlipOutScheduleToday"
             },
             {
-                "stepClassName": "org.tweetwallfx.vdz.steps.UpdateScheduleResults"
+                "stepClassName": "org.tweetwallfx.vdz.steps.ShowSchedule"
             },
             {
                 "stepClassName": "org.tweetwallfx.controls.steps.PauseStep",
@@ -24,6 +24,9 @@
                     "amount": 1,
                     "unit": "SECONDS"
                 }
+            },
+            {
+                "stepClassName": "org.tweetwallfx.vdz.steps.UpdateScheduleResults"
             },
             {
                 "stepClassName": "org.tweetwallfx.vdz.steps.FlipOutTweets"
