Changed the algorithm determining which files to load. The files are only identified by fileName. The places the files are searched for are still fixed. By default the files named "tweetwallConfig.json" are loaded. If the system property "org.tweetwall.config.fileName" is set then its value is used as the customized fileName and files named such are loaded. fixes TweetWallFX/TweetwallFX#376

--- a/config/build.gradle
+++ b/config/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright 2014-2017 TweetWallFX
+ * Copyright 2014-2018 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -25,4 +25,8 @@
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
     compile project(':TweetWallFX-Utility')
+}
+
+test {
+    systemProperty 'org.tweetwall.config.fileName', 'myCustomConfig.json'
 }
