initial devoxx pl project setup

--- a/settings.gradle
+++ b/settings.gradle
@@ -61,6 +61,14 @@ project(':devoxx-2017-be:exhibition').name = 'Exhibition'
 include ':devoxx-2017-be:cinema'
 project(':devoxx-2017-be:cinema').name = 'Cinema'
 //project(':devoxx-2017-be').name = 'TweetWallFX-Devoxx-2017-BE'
+include ':devoxx-2018-pl'
+include ':devoxx-2018-pl:cfp-impl'
+project(':devoxx-2018-pl:cfp-impl').name = 'CFP-Implementation-2018-PL'
+include ':devoxx-2018-pl:exhibition'
+project(':devoxx-2018-pl:exhibition').name = 'Exhibition'
+include ':devoxx-2018-pl:cinema'
+project(':devoxx-2018-pl:cinema').name = 'Cinema'
+
 include ':netbeans'
 project(":netbeans").name = "TweetWallFX-NetBeans"
 include ':javaone'
