set title appropriate for tweetwall project

--- a/devoxx-2018-pl/cinema/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2018-pl/cinema/src/main/resources/tweetwallConfig.json
@@ -4,7 +4,7 @@
     },
     "tweetwall" : {
         "query" : "#devoxx",
-        "title" : "The JavaFX Tweetwall for Devoxx 2017!",
+        "title" : "The JavaFX Cinema Tweetwall for Devoxx PL 2018!",
         "stylesheetResource" : "tweetwall.css"
     }
 }
