configured stepEngine for devoxx-2018-pl via tweetwallConfig.json and removed steps.json

--- a/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
@@ -10,6 +10,15 @@
     "stepEngine": {
         "steps": [
             {
+                "stepClassName": "org.tweetwallfx.devoxx18pl.exhibition.DevoxxUpdateScheduleResults"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.devoxx18pl.exhibition.DevoxxShowSchedule"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.devoxx18pl.exhibition.DevoxxFlipOutSchedule"
+            },
+            {
                 "stepClassName": "org.tweetwallfx.controls.steps.FadeInCloudStep"
             },
             {
