--- a/devoxx-2017-us/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-us/src/main/resources/tweetwallConfig.json
@@ -1,7 +1,42 @@
 {
-    "tweetwall" : {
-        "query" : "#devoxx OR #devoxxus",
-        "title" : "The JavaFX Tweetwall for Devoxx US 2017!",
-        "stylesheetResource" : "tweetwall.css"
+    "tweetwall": {
+        "query": "#devoxx OR #devoxxus",
+        "title": "The JavaFX Tweetwall for Devoxx US 2017!",
+        "stylesheetResource": "tweetwall.css"
+    },
+    "stepEngine": {
+        "steps": [
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.FadeInCloudStep"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.NextTweetStep"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.AddTweetToCloudStep"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.CloudToCloudStep"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.CloudToTweetStep"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.PauseStep",
+                "config": {
+                    "amount": 5,
+                    "unit": "SECONDS"
+                }
+            },
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.TweetToCloudStep"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.CloudFadeOutStep"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.controls.steps.ImageMosaicStep"
+            }
+        ]
     }
 }
