--- a/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
@@ -4,11 +4,20 @@
     },
     "tweetwall": {
         "query": "#devoxx",
-        "title": "The JavaFX Tweetwall for Devoxx 2017!",
+        "title": "The JavaFX Exhibition Tweetwall for Devoxx PL 2018!",
         "stylesheetResource": "tweetwall.css"
     },
     "stepEngine": {
         "steps": [
+            {
+                "stepClassName": "org.tweetwallfx.devoxx18pl.exhibition.DevoxxUpdateScheduleResults"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.devoxx18pl.exhibition.DevoxxShowSchedule"
+            },
+            {
+                "stepClassName": "org.tweetwallfx.devoxx18pl.exhibition.DevoxxFlipOutSchedule"
+            },
             {
                 "stepClassName": "org.tweetwallfx.controls.steps.FadeInCloudStep"
             },
