Replaced ScheduleData.RoomComparator with StringNumberComparator. Also update jvmArgs of devoxx-2018-pl/cinema to select a valid slot in the schedule of Devoxx PL 2018 fixes TweetWallFX/TweetwallFX#398

--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,13 @@ allprojects {
     afterEvaluate {
         check.dependsOn(spotlessCheck)
     }
+
+    plugins.withType(org.gradle.api.plugins.GroovyPlugin) {
+        dependencies {
+            compile group: 'org.codehaus.groovy', name: 'groovy-all', version: versionGroovy
+            testCompile group: 'org.spockframework', name: 'spock-core', version: versionSpockFramework
+        }
+    }
 }
 
 description = 'TweetWallFX'
