--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,8 @@
 # 
 
 # artifact versions
+versionGroovy=2.5.0
+versionGroovy=2.4.15
 versionJUnit=4.11
 versionJackson=2.+
 versionJasson=1.0
@@ -30,4 +32,5 @@ versionJavaxJson=1.1
 versionJavaxJsonBindAPI=1.0
 versionJersey=2.25
 versionLog4j=2.9.0
+versionSpockFramework=1.1-groovy-2.4
 versionTwitter4j=4.0.6
