--- a/devoxx-cfp-stepengine/build.gradle
+++ b/devoxx-cfp-stepengine/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright 2014-2018 TweetWallFX
+ * Copyright 2018 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -21,25 +21,10 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
-apply plugin: 'application'
-mainClassName = 'org.tweetwallfx.generic.Main'
-
-tasks.withType(JavaExec) {
-    main mainClassName
-}
-
-task('debug', dependsOn: 'classes', type: JavaExec) {
-    classpath sourceSets.main.runtimeClasspath
-    debug = true
-}
-
 dependencies {
+//    compile project(':TweetWallFX-Configuration')
+    compile project(':TweetWallFX-Controls')
     compile project(':TweetWallFX-Devoxx-API-CFP')
-    compile project(':TweetWallFX-Devoxx-CFP-StepEngine')
-    compile project(':TweetWallFX-Generic2D')
-    compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-
-    runtime project(":devoxx-2017-be:CFP-Implementation-2017-BE")
-    runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
+//
+//    testCompile project(':TweetWallFX-Devoxx-CFP-Test')
 }
