--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ buildscript {
             exclude group:'org.slf4j', module:'slf4j-simple'
             exclude group:'org.gradle', module:'gradle-tooling-api' // was version 2.7
         }
-        classpath group: 'gradle.plugin.com.github.spotbugs', name: 'gradlePlugin', version: '1.6.0'
+        classpath group: 'gradle.plugin.com.github.spotbugs', name: 'spotbugs-gradle-plugin', version: '1.6.2'
         classpath group: 'com.netflix.nebula', name: 'gradle-info-plugin', version: '3.+'
         // VCS dependency required by plugin 'gradle-info-plugin'
         classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '3.+'
