--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,13 @@ buildscript {
         // VCS dependency required by plugin 'gradle-info-plugin'
         classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '3.+'
         classpath group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: '3.10.0'
+        classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: '2.6.2'
         gradleApi()
     }
 }
 
 apply plugin: 'build-dashboard'
+apply plugin: 'org.sonarqube'
 
 subprojects {
     apply plugin: 'java'
