Moved duplicated classes to devoxx-cfp-stepengine project. References to these classes and the various forms of Steps triggering/requiring the DataProviders have been modified to use those implementations in project devoxx-cfp-stepengin fixes TweetWallFX/TweetwallFX#410

--- a/devoxx-2017-be/cinema/build.gradle
+++ b/devoxx-2017-be/cinema/build.gradle
@@ -29,7 +29,7 @@ tasks.withType(JavaExec) {
     main mainClassName
     jvmArgs '-Dorg.tweetwallfx.scheduledata.day=tuesday'
     jvmArgs '-Dorg.tweetwallfx.scheduledata.time=10:00Z'
-    jvmArgs '-Dorg.tweetwallfx.devoxxbe17.proposal=CTH-5247'
+    jvmArgs '-Dorg.tweetwallfx.scheduledata.proposal=CTH-5247'
 }
 
 task('debug', dependsOn: 'classes', type: JavaExec) {
