--- a/devoxx-2017-be/cinema/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-be/cinema/src/main/resources/tweetwallConfig.json
@@ -26,7 +26,7 @@
                 "stepClassName": "org.tweetwallfx.devoxx17be.steps.Devoxx17FlipInTweets"
             },
             {
-                "stepClassName": "org.tweetwallfx.devoxx17be.steps.Devoxx17UpdateVotingResults"
+                "stepClassName": "org.tweetwallfx.devoxx.cfp.stepengine.steps.UpdateVotingResults"
             },
             {
                 "stepClassName": "org.tweetwallfx.devoxx17be.steps.Devoxx17FlipOutScheduleToday"
