--- a/devoxx-2018-pl/cinema/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2018-pl/cinema/src/main/resources/tweetwallConfig.json
@@ -26,7 +26,7 @@
                 "stepClassName": "org.tweetwallfx.devoxx18pl.steps.DevoxxFlipInTweets"
             },
             {
-                "stepClassName": "org.tweetwallfx.devoxx18pl.steps.DevoxxUpdateVotingResults"
+                "stepClassName": "org.tweetwallfx.devoxx.cfp.stepengine.steps.UpdateVotingResults"
             },
             {
                 "stepClassName": "org.tweetwallfx.devoxx18pl.steps.DevoxxFlipOutScheduleToday"
