--- a/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
@@ -10,7 +10,7 @@
     "stepEngine": {
         "steps": [
             {
-                "stepClassName": "org.tweetwall.devoxx.cfp.stepengine.steps.UpdateScheduleResults",
+                "stepClassName": "org.tweetwallfx.devoxx.cfp.stepengine.steps.UpdateScheduleResults",
                 "config": {
                     "initialOffset": 5,
                     "updateInteval": 15
