Added JSON files to the spotless configuration for textBasedFiles. Updated the existing JSON files to comply with spotless rules. fixes TweetWallFX/TweetwallFX#421

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ allprojects {
                 '**/*.asciidoc',
                 '**/*.adoc',
                 '**/*.asc',
+                '**/*.json',
                 '**/*.md',
                 '**/.gitignore'
 
