Added generic NodeFadeOutStep. Replaced simple, one-node flip out steps by using NodeFadeOutStep. fixes TweetWallFX/TweetwallFX#423

--- a/devoxx-2017-be/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-be/exhibition/src/main/resources/tweetwallConfig.json
@@ -20,7 +20,10 @@
                 "stepClassName": "org.tweetwallfx.devoxx17be.exhibition.Devoxx17ShowSchedule"
             },
             {
-                "stepClassName": "org.tweetwallfx.devoxx17be.exhibition.Devoxx17FlipOutSchedule"
+                "stepClassName": "org.tweetwallfx.controls.steps.NodeFadeOutStep",
+                "config": {
+                    "nodeSelector": "#scheduleNode"
+                }
             },
             {
                 "stepClassName": "org.tweetwallfx.controls.steps.FadeInCloudStep"
