--- a/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2018-pl/exhibition/src/main/resources/tweetwallConfig.json
@@ -20,7 +20,10 @@
                 "stepClassName": "org.tweetwallfx.devoxx18pl.exhibition.DevoxxShowSchedule"
             },
             {
-                "stepClassName": "org.tweetwallfx.devoxx18pl.exhibition.DevoxxFlipOutSchedule"
+                "stepClassName": "org.tweetwallfx.controls.steps.NodeFadeOutStep",
+                "config": {
+                    "nodeSelector": "#scheduleNode"
+                }
             },
             {
                 "stepClassName": "org.tweetwallfx.controls.steps.FadeInCloudStep"
