--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,7 @@ allprojects {
                 '**/*.asciidoc',
                 '**/*.adoc',
                 '**/*.asc',
+                '**/*.json',
                 '**/*.md',
                 '**/.gitignore'
 
