--- a/gradle.properties
+++ b/gradle.properties
@@ -33,4 +33,5 @@ versionJavaxJsonBindAPI=1.0
 versionJersey=2.25
 versionLog4j=2.9.0
 versionSpockFramework=1.1-groovy-2.4
+versionSpotless=3.15.0
 versionTwitter4j=4.0.6
