--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ subprojects {
 
         dependencies {
             testCompile group: 'junit', name: 'junit', version: versionJUnit
-            testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
+            testCompile group: 'org.assertj', name: 'assertj-core', version: versionAssertJ
         }
 
         jar {
