--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@
 # artifact versions
 versionAssertJ=3.+
 versionCacheApi=1.1.0
+versionGradleInfoPlugin=4.+
 versionGroovy=2.5.0
 versionGroovy=2.4.15
 versionJUnit=4.12
