--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # 
 # The MIT License
 # 
-# Copyright 2014-2017 TweetWallFX
+# Copyright 2014-2018 TweetWallFX
 # 
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -36,5 +36,6 @@ versionJavaxJsonBindAPI=1.0
 versionJersey=2.25
 versionLog4j=2.11.1
 versionSpockFramework=1.1-groovy-2.4
+versionSpotbugs=1.6.4
 versionSpotless=3.15.0
 versionTwitter4j=4.0.7
